devops/deploy/k8s/overlays/dev/ingress-2.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-example-ui
spec:
  tls:
    - hosts:
        - gke-example.dev.cs.west.us.mckesson.com
  rules:
    - host: dev-connect.mckesson.com
      path: /gke-example-ui
      http:
        paths:
          - backend:
              serviceName: gke-example
              servicePort: 8080
