devops/deploy/k8s/overlays/dev/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-example
spec:
  tls:
    - hosts:
        - gke-example.dev.cs.west.us.mckesson.com
  rules:
    - host: gke-example.dev.cs.west.us.mckesson.com
      http:
        paths:
          - backend:
              serviceName: gke-example
              servicePort: 8080
